kubernetes/home.vijayakumar.xyz/media/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/name: sonarr
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
        app.kubernetes.io/name: sonarr
    spec:
      containers:
        - image: ghcr.io/linuxserver/sonarr:4.0.11
          imagePullPolicy: IfNotPresent
          name: sonarr
          ports:
            - containerPort: 8989
              name: sonarr-tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: sonarr
              subPath: sonarr-config
            - mountPath: /media
              readOnly: false
              name: nfs
      volumes:
        - name: sonarr
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: nfs
          persistentVolumeClaim:
            claimName: media-share-pvc
