kubernetes/home.vijayakumar.xyz/media/sonarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`sonarr.home.vijayakumar.xyz`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: default-headers
  tls:
    secretName: home-vijayakumar-xyz
